# omnisynth-dev

./: .gitignore  .readthedocs.yaml  LICENSE.md  OmniSynth.spec  README.md  README.rst  dump.rdb  main.py  opencv.py
cache/: tmp6sesa81b.__wz_cache
dsp/: main.scd
gui/: README.md  gui.py  omni.ini  omni.kv  settings.json
modules/: client_test.py  constants.py  server.py  (+2 more)
omnisynth/: MANIFEST.in  README.md  build-and-install.bat  pyproject.toml  setup.cfg
omnisynth/src/omnisynth/: knob.py  knob_collection.py  omni.py  osc_interface.py  osc_message_sender.py  output_device.py  output_device_collection.py  patch.py  patch_collection.py  pattern.py  pattern_collection.py  teensy_midi_handler.py  value_converter.py
omnisynth/src/omnisynth.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omnisynth/src/omnisynth/dsp/: README.md  main.scd
omnisynth/src/omnisynth/dsp/patches/: tone1.scd  tone2.scd  tone5.scd  tone6.scd  tone910.scd
omnisynth/src/omnisynth/dsp/patterns/midi/: gen_midi.txt
omnisynth/src/omnisynth/dsp/patterns/songs/song1/: pattern1.scd  pattern2.scd  pattern6.scd  pattern9.scd
omnisynth/src/omnisynth/dsp/patterns/songs/song2/: pattern1.scd  pattern2.scd  pattern5.scd  pattern6.scd
omnisynth/src/omnisynth/submodules/: knob.py  knob_collection.py  message_handler.py  midi_handler.py  osc.py  osc_interface.py  osc_message_handler.py  osc_message_sender.py  output_device.py  output_device_collection.py  patch.py  patch_collection.py  pattern.py  pattern_collection.py  readme.md  server.py  teensy_message.py  teensy_midi_handler.py  value_converter.py
(+25 files in other folders)
