[metadata]
name = omnisynth
version = 0.2.3
author = Omar Barazanji
author_email = ozanji345@gmail.com
description = OmniSynth digital synth framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omniaura/omnisynth-dev
project_urls =
    Bug Tracker = https://github.com/omniaura/omnisynth-dev/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = src

